--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 	<p> A PROGRAMMING ENTHUSIAST </p>
 </div>
  
-<!--<h1>    About Myself    </h1>-->
-
-<!--<p>  Well you guessed it! My name is Mohid Qureshi, I am currently studying Computer Science at Carleton University </p> -->
 
 <div class = "images">
 		<a href="https://github.com/MOHIDQ/"> 
@@ -50,25 +47,21 @@
 		</a>
 
 	<br> </br>
-	<p style="padding: 20px 0px 0px 15px; font-weight: bold; ">Sales tax calculator developed for Android</p>
+	<p class="appText">Sales tax calculator developed for Android</p>
 </div>
-
-<!--<img src="profpic.jpg" alt="linkedin picture" width="112px" height="182px" border="0" hspace="20px" vspace="0px" alight="middle" style="position: absolute;" name="profilePic"
-		> -->
 
 
 <div class="subHeader">
 	<h1> About Myself </h1>
 	<div>
 		<a href="MohidQureshi Resume (1).pdf">
-			<button class="resButton" style ="min-width: 140px; min-height: 30px;" >RESUME</button>
+			<button class="resButton" >RESUME</button>
 		</a>
 	</div>
-    <!--<button class="resButton" style ="width: 10%;" >RESUME</button>-->
 
 	<!-- <br></br> -->
-	<p> <img src="images/profpic2.jpg" alt="profile picture" width="232px" height="132px" border="0" hspace="20px" vspace="0px" align="left">
-		While random text is mostly intended to just fill up the blank spaces, for many practical purposes you essentially want the look and feel of the dummy text you are going to use to be as close as possible to the real content that will eventually replace it. Considering that different language, writing style and substance of text result in an endless variety of different word combinations and visual impressions that a piece of text can have and make, it is always a plus to have it use the right kind of words and look like the final product as much as possible. Whether you are working in the technical, lifestyle, news or fantasy business, you will always impress and fascinate by having your concept pieces look and feel like they are the real technical, lifestyle, news or fantasy deal... to name but a few examples.While random text is mostly intended to just fill up the blank spaces, for many practical purposes you essentially want the look and feel of the dummy text you are going to use to be as close as possible to the real content that will eventually replace it. Considering that different language, writing style and substance of text result in an endless variety of different word combinations and visual impressions that a piece of text can have and make, it is always a plus to have it use the right kind of words and look like the final product as much as possible. Whether you are working in the technical, lifestyle, news or fantasy business, you will always impress and fascinate by having your concept pieces look and feel like they are the real technical, lifestyle, news or fantasy deal... to name but a few examples.
+	<p style = "font-size: 25px;"> <img src="images/profpic2.jpg" alt="profile picture" width="232px" height="132px" border="0" hspace="20px" vspace="0px" align="left">
+		While random text is mostly intended to just fill up the blank spaces, for many practical purposes you essentially want the look and feel of the dummy text you are going to use to be as close as possible to the real content that will eventually replace it. Considering that different language, writing style and substance of text result in an endless variety of different word combinations and visual impressions that a piece of text can have and make, it is always a plus to have it use the right kind of words and look like the final product as much as possible. Whether you are working in the technical, lifestyle, news or fantasy business, you will always impress and fascinate by having your concept pieces look and feel like they are the real technical, lifestyle, news or fantasy deal... to name but a few examples.
 	</p>
 	
 </div>
