--- a/index.html
+++ b/index.html
@@ -22,27 +22,21 @@
 
 <div class = "images">
 		<a href="https://github.com/MOHIDQ/"> 
-			<img src="images/githubpic.png" alt="github picture" width="82px" height="82px" border="0" hspace="20px" title="Github profile" style="position: absolute;" name="githubLink"
-			onmouseover="githubLink.width='92';githubLink.height='92';" 
-			onmouseout="githubLink.width='82';githubLink.height='82';">
+			<img src="images/githubpic.png" alt="github picture" width="82px" height="82px" border="0" hspace="20px" title="Github profile" style="position: absolute;" name="githubLink">
 
 		</a>
 
 </div>
 <div class="images2">
 		<a href="https://www.linkedin.com/in/mohid-qureshi-2a711015b/"> 
-			<img src="images/linkedinpic2.png" alt="linkedin picture" width="88px" height="88px" border="0" hspace="20px" vspace="0px" alight="middle" title="linkedin profile" style="position: absolute;" name="linkedinLink" 
-			onmouseover="linkedinLink.width='98';linkedinLink.height='98';" 
-			onmouseout="linkedinLink.width='88';linkedinLink.height='88';">
+			<img src="images/linkedinpic2.png" alt="linkedin picture" width="88px" height="88px" border="0" hspace="20px" vspace="0px" alight="middle" title="linkedin profile" style="position: absolute;" name="linkedinLink" >
 
 		</a>
 </div>
 
 <div class = "images3">
-  <a href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram"> 
-			<img src="images/googleplaypic.png" alt="linkedin picture" width="182px" height="82px" border="0" hspace="0px" vspace="0px" alight="middle" title="Sales tax calculator link" style="position: absolute;" name="googleplayLink"
-			onmouseover="googleplayLink.width='192';googleplayLink.height='88';" 
-			onmouseout="googleplayLink.width='182';googleplayLink.height='82';">
+  <a class = "googleImage" href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram"> 
+			<img src="images/googleplaypic.png" alt="linkedin picture" width="182px" height="82px" border="0" hspace="0px" vspace="0px" alight="middle" title="Sales tax calculator link" style="position: absolute;" name="googleplayLink">
 
 		</a>
 
@@ -54,8 +48,11 @@
 <div class="subHeader">
 	<h1> About Myself </h1>
 	<div>
-		<a href="MohidQureshi Resume (1).pdf">
+		<a href="MohidQureshi Resume (1).pdf" style = "text-decoration: none;">
 			<button class="resButton" >RESUME</button>
+		</a>
+		<a href="mailto:mohidq99@gmail.com">
+			<button class="resButton" >EMAIL</button>
 		</a>
 	</div>
 
