--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 
 	<!-- <br></br> -->
 	<p style = "font-size: 25px;"> <img src="images/profpic2.jpg" alt="profile picture" width="232px" height="132px" border="0" hspace="20px" vspace="0px" align="left">
-		While random text is mostly intended to just fill up the blank spaces, for many practical purposes you essentially want the look and feel of the dummy text you are going to use to be as close as possible to the real content that will eventually replace it. Considering that different language, writing style and substance of text result in an endless variety of different word combinations and visual impressions that a piece of text can have and make, it is always a plus to have it use the right kind of words and look like the final product as much as possible. Whether you are working in the technical, lifestyle, news or fantasy business, you will always impress and fascinate by having your concept pieces look and feel like they are the real technical, lifestyle, news or fantasy deal... to name but a few examples.
+		I currently attend Carleton Univerity for computer science with a focus stream in algorithms.
+		<br> </br> 
+		I am currently in my second year where I will be taking courses focusing on web development, abstract data types & algorithms, <span style="color:#4385ef">Android & IOS development</span>, data modeling & discrete math. 
+		<br> </br> 
+		I have extensive experience with <span style="color:#4385ef">Java, Swift, Python, and SQLite</span>. A few projects I have developed include an encrypion/decryption tool, Atari's Asteroid and Arkanoid, sales tax calulator, customizable puzzle slider and an adaptive projectile motion simulator built for <span style="color:#4385ef">IOS.</span>
 	</p>
 	
 </div>
