--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 			<button class="resButton" >RESUME</button>
 		</a>
 		<a href="mailto:mohidq99@gmail.com">
-			<button class="resButton" >EMAIL</button>
+			<button class="resButton" >CONTACT</button>
 		</a>
 	</div>
 
 	<!-- <br></br> -->
-	<p style = "font-size: 25px;"> <img src="images/profpic2.jpg" alt="profile picture" width="232px" height="132px" border="0" hspace="20px" vspace="0px" align="left">
-		I currently attend Carleton Univerity for computer science with a focus stream in algorithms.
+	<p style = "font-size: 22px; font-family:Verdana;"> <img src="images/profpic2.jpg" alt="profile picture" width="232px" height="132px" border="0" hspace="20px" vspace="0px" align="left">
+		I'm a <span style="color:#4385ef">Computer Science</span> student with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving.
 		<br> </br> 
-		I am currently in my second year where I will be taking courses focusing on web development, abstract data types & algorithms, <span style="color:#4385ef">Android & IOS development</span>, data modeling & discrete math. 
+		I am currently in my second year where I will be taking courses focusing on Web development, Abstract Data Types & Algorithms, <span style="color:#4385ef">Android & IOS development</span>, Data modeling & Discrete Structures. 
 		<br> </br> 
-		I have extensive experience with <span style="color:#4385ef">Java, Swift, Python, and SQLite</span>. A few projects I have developed include an encrypion/decryption tool, Atari's Asteroid and Arkanoid, sales tax calulator, customizable puzzle slider and an adaptive projectile motion simulator built for <span style="color:#4385ef">IOS.</span>
+		I have extensive experience with <span style="color:#4385ef">Java • Swift • Python • SQLite</span>. A few projects I have developed include an encrypion/decryption tool, Atari's Asteroid and Arkanoid, Sales Tax calulator, Customizable puzzle slider and an adaptive projectile motion simulator built for <span style="color:#4385ef">IOS.</span>
 	</p>
 	
 </div>
