--- a/index.html
+++ b/index.html
@@ -57,8 +57,17 @@
 	</div>
 
 	<!-- <br></br> -->
-	<p style = "font-size: 22px; font-family:Verdana;"> <img src="images/profpic2.jpg" alt="profile picture" width="232px" height="132px" border="0" hspace="20px" vspace="0px" align="left">
-		I'm a <span style="color:#4385ef">Computer Science</span> student with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving.
+	<p style = "font-size: 22px; font-family:Verdana;">
+		<a href = "MohidQureshi Resume (1).pdf">
+			<img class = "mySlides" src="images/motionImage2.png" alt="motion picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left"> 
+		</a>
+		<a href="https://github.com/MOHIDQ/2D-Arkanoid-game">
+			<img class = "mySlides" src="images/astImage.png" alt="asteroid picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left">
+		</a>  
+		<a href="https://github.com/MOHIDQ/2D-Arkanoid-game">
+			<img class = "mySlides" src="images/puzzleImage.png" alt="puzzle picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left">
+		</a> 
+		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving.
 		<br> </br> 
 		I am currently in my second year where I will be taking courses focusing on Web development, Abstract Data Types & Algorithms, <span style="color:#4385ef">Android & IOS development</span>, Data modeling & Discrete Structures. 
 		<br> </br> 
@@ -66,6 +75,9 @@
 	</p>
 	
 </div>
+
+<script src="external.js"> </script>
+
 
 </body>
  
