--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
 	<!-- <br></br> -->
 	<p style = "font-size: 22px; font-family:Verdana;">
-		<a href = "MohidQureshi Resume (1).pdf">
+		<a href = "https://github.com/MOHIDQ/">
 			<img class = "mySlides" src="images/motionImage2.png" alt="motion picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left"> 
 		</a>
-		<a href="https://github.com/MOHIDQ/2D-Arkanoid-game">
+		<a href="https://github.com/MOHIDQ/2D-Asteroid-Game">
 			<img class = "mySlides" src="images/astImage.png" alt="asteroid picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left">
 		</a>  
-		<a href="https://github.com/MOHIDQ/2D-Arkanoid-game">
+		<a href="https://github.com/MOHIDQ/">
 			<img class = "mySlides" src="images/puzzleImage.png" alt="puzzle picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left">
 		</a> 
 		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving.
