Updated Layout & Information

--- a/index.html
+++ b/index.html
@@ -1,82 +1,113 @@
 <!doctype html>
 <html>
 <head>
-<title> { Mohid } </title>
+
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=0.75">
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="websiteStyleSheet.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 
 </head>
 
 <body>
 
- <meta name="viewport" content="width=device-width">
+<!-- Add font awesome icons -->
 
-<div class="header">
-	<h1> < MOHID QURESHI > </h1>
-	<p> A PROGRAMMING ENTHUSIAST </p>
-</div>
- 
+		
 
-<div class = "images">
-		<a href="https://github.com/MOHIDQ/"> 
-			<img src="images/githubpic.png" alt="github picture" width="82px" height="82px" border="0" hspace="20px" title="Github profile" style="position: absolute;" name="githubLink">
-
-		</a>
-
-</div>
-<div class="images2">
-		<a href="https://www.linkedin.com/in/mohid-qureshi-2a711015b/"> 
-			<img src="images/linkedinpic2.png" alt="linkedin picture" width="88px" height="88px" border="0" hspace="20px" vspace="0px" alight="middle" title="linkedin profile" style="position: absolute;" name="linkedinLink" >
-
-		</a>
-</div>
-
-<div class = "images3">
-  <a class = "googleImage" href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram"> 
-			<img src="images/googleplaypic.png" alt="linkedin picture" width="182px" height="82px" border="0" hspace="0px" vspace="0px" alight="middle" title="Sales tax calculator link" style="position: absolute;" name="googleplayLink">
-
-		</a>
-
-	<br> </br>
-	<p class="appText">Sales tax calculator developed for Android</p>
-</div>
-
-
-<div class="subHeader">
-	<h1> About Myself </h1>
-	<div>
-		<a href="MohidQureshi Resume (1).pdf" style = "text-decoration: none;">
-			<button class="resButton" >RESUME</button>
-		</a>
-		<a href="mailto:mohidq99@gmail.com">
-			<button class="resButton" >CONTACT</button>
+<div class="card">
+  <div class="card-body">
+    
+	<div align="center"> 
+		<h1>{ Mohid Qureshi }</h1>
+		<br></br>
+		<a href="MohidQureshi Resume (2).pdf">
+			<button  type="button" class="btn btn-outline-dark resButton">RESUME</button>
 		</a>
 	</div>
+	<br></br>
+	<div align="center">
+		<a href="https://www.linkedin.com/in/mohid-qureshi-2a711015b/" target="_blank"class="fa fa-linkedin"></a>
+		<a href="https://github.com/MOHIDQ" target="_blank"class="fa fa-github"></a>
+		<a href="mailto:mohidq99@gmail.com" target="_blank"class="fa fa-envelope-o"></a>
+		<a href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram" target="_blank"class="fa fa-android"></a>
 
-	<!-- <br></br> -->
-	<p style = "font-size: 22px; font-family:Verdana;">
-		<a href = "https://github.com/MOHIDQ/">
-			<img class = "mySlides" src="images/motionImage2.png" alt="motion picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left"> 
-		</a>
-		<a href="https://github.com/MOHIDQ/2D-Asteroid-Game">
-			<img class = "mySlides" src="images/astImage.png" alt="asteroid picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left">
-		</a>  
-		<a href="https://github.com/MOHIDQ/">
-			<img class = "mySlides" src="images/puzzleImage.png" alt="puzzle picture" width="400px" height="240px" border="0" hspace="0px" vspace="0px" align="left">
-		</a> 
-		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving.
-		<br> </br> 
-		I am currently in my second year where I will be taking courses focusing on Web development, Abstract Data Types & Algorithms, <span style="color:#4385ef">Android & IOS development</span>, Data modeling & Discrete Structures. 
-		<br> </br> 
-		I have extensive experience with <span style="color:#4385ef">Java • Swift • Python • SQLite</span>. A few projects I have developed include an encrypion/decryption tool, Atari's Asteroid and Arkanoid, Sales Tax calulator, Customizable puzzle slider and an adaptive projectile motion simulator built for <span style="color:#4385ef">IOS.</span>
-	</p>
-	
 </div>
 
-<script src="external.js"> </script>
+  </div>
+</div>
+
+<br id="lineBreak"></br>
+
+<div class="card">
+  <div class="card-body">
+  	<div align="center"> <h2>Technical Skills</h2> </div>
+  	
+	<br> </br>
+	<div align="center">
+		
+		<i class=" devicon-express-original-wordmark"></i>
+		<i class=" devicon-nodejs-plain-wordmark"></i>
+		<i class=" devicon-mongodb-plain-wordmark"></i>
+		<i class=" devicon-javascript-plain"></i>
+		<i class=" devicon-java-plain-wordmark"></i>
+		
+	</div>
+	<br> </br>
+
+	<div align="center">
+		<i class=" devicon-postgresql-plain-wordmark"></i>
+		<i class=" devicon-vuejs-plain-wordmark"></i>
+		<i class=" devicon-csharp-plain"></i>
+		<i class=" devicon-dot-net-plain-wordmark"></i>
+		<i class=" devicon-c-plain"></i>
+		
+	</div>
+	<br> </br>
+
+	<div align="center">
+		<i class=" devicon-swift-plain-wordmark"></i>
+		<i class=" devicon-html5-plain-wordmark"></i>
+		<i class=" devicon-bootstrap-plain-wordmark"></i>
+		<i class=" devicon-python-plain-wordmark"></i>
+		<i class=" devicon-cplusplus-plain"></i>
+	</div>
+	<br> </br>
+
+ </div>
+</div>
+
+<br id="lineBreak"></br>
+
+<div class="card">
+  <div class="card-body">
+  	<div align="center"> <h2>About Me</h2> </div>
+  	<p style = "font-size: 22px; font-family:Verdana;">
+		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving. I am currently working as a Mobile Development Teaching Assistant throughout the Winter semester at Carleton. 
+		<br> </br> 
+		I am currently in my third year where I will be taking courses focusing on Database Management Systems, Design & Analysis of Algorithms, <span style="color:#4385ef">Android & IOS development</span>, Programming Paradigms,  Objected Oriented Software Engineering & Operating Systems. 
+		<br> </br> 
+		I have extensive experience with <span style="color:#4385ef">Javascript • Java • Android Development • Python • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#4385ef">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that will be utilized by the rest of the Government of Canada to create web applications. As well as built an NPRI web query tool which provides data about pollutant releases, collected from all corporations that reside in Canada. 
+	</p>
+
+  </div>
+</div>
+
+
+
 
 
 </body>
