Added additonal technical skills

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
 	</div>
 	<br> </br>
 
+	<div align="center">
+		<i class=" devicon-nodewebkit-plain-wordmark"></i>
+		<i class=" devicon-linux-plain"></i>
+		<i class=" devicon-vim-plain" title="Vim Editor"></i>
+		<i class=" devicon-git-plain-wordmark"></i>
+		<i class="devicon-chrome-plain"></i>
+
+
+	</div>
+	<br> </br>
+
  </div>
 </div>
 
@@ -98,8 +109,10 @@
   	<p style = "font-size: 22px; font-family:Verdana;">
 		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving. I am currently working as a Mobile Development Teaching Assistant throughout the Winter semester at Carleton. 
 		<br> </br> 
+
 		I am currently in my third year where I will be taking courses focusing on Database Management Systems, Design & Analysis of Algorithms, <span style="color:#4385ef">Android & IOS development</span>, Programming Paradigms,  Objected Oriented Software Engineering & Operating Systems. 
 		<br> </br> 
+
 		I have extensive experience with <span style="color:#4385ef">Javascript • Java • Android Development • Python • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#4385ef">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that will be utilized by the rest of the Government of Canada to create web applications. As well as built an NPRI web query tool which provides data about pollutant releases, collected from all corporations that reside in Canada. 
 	</p>
 
