--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 
+
 </head>
 
 <body>
@@ -43,7 +44,8 @@
 		<a href="https://www.linkedin.com/in/mohid-qureshi-2a711015b/" target="_blank"class="fa fa-linkedin"></a>
 		<a href="https://github.com/MOHIDQ" target="_blank"class="fa fa-github"></a>
 		<a href="mailto:mohidq99@gmail.com" target="_blank"class="fa fa-envelope-o"></a>
-		<a href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram" target="_blank"class="fa fa-android"></a>
+		<a href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram" target="_blank"class="fa fa-calculator" title="Canadian Sales Tax Calculator Application" ></a>
+		<a href="https://play.google.com/store/apps/details?id=com.gametime" target="_blank"class="fa fa-android" title="GameTime Android Application"></a>
 
 </div>
 
@@ -107,10 +109,10 @@
   <div class="card-body">
   	<div align="center"> <h2>About Me</h2> </div>
   	<p style = "font-size: 22px; font-family:Verdana;">
-		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in coding and problem solving. I am currently working as a Mobile Development Teaching Assistant throughout the Winter semester at Carleton. 
+		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in Web Development, Android Development and Problem Solving. 
 		<br> </br> 
 
-		I am currently in my third year where I will be taking courses focusing on Database Management Systems, Design & Analysis of Algorithms, <span style="color:#4385ef">Android & IOS development</span>, Programming Paradigms,  Objected Oriented Software Engineering & Operating Systems. 
+		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#4385ef">Machine Learning • Distributed Computing • Android & IOS development • Computer Vision • Neural Networks • Artificial Intelligance</span>. 
 		<br> </br> 
 
 		I have extensive experience with <span style="color:#4385ef">Javascript • Java • Android Development • Python • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#4385ef">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that will be utilized by the rest of the Government of Canada to create web applications. As well as built an NPRI web query tool which provides data about pollutant releases, collected from all corporations that reside in Canada. 
