--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
   <div class="card-body">
   	<div align="center"> <h2>About Me</h2> </div>
   	<p style = "font-size: 22px; font-family:Verdana;">
-		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in Web Development, Android Development and Problem Solving. 
+		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in Web Development, Android Development and Problem Solving.
+		I currently have an internship at <span style="color:#4385ef">Versaterm Inc as a Software Developer</span>, where I have created a <span style="color:#4385ef"> web application (NodeJS, MySQL, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all our employees and displays them in a concise table format for other employees to check coworkers statuses for the purpose of making eachother more reachable while working from home. I am currently working on <span style="color:#4385ef">automating</span> the process of filling out police documents ie) Affidavits with our data using the <span style="color:#4385ef">Office Javascript API</span>.
 		<br> </br> 
 
 		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#4385ef">Machine Learning • Distributed Computing • Android & IOS development • Computer Vision • Neural Networks • Artificial Intelligance</span>. 
