--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
+<script src="https://kit.fontawesome.com/b46ccf4411.js" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="websiteStyleSheet.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
+
 
 
 
@@ -29,11 +32,11 @@
 
 		
 
-<div class="card">
+<div class="card" style="width: 97%; margin: 0 auto;">
   <div class="card-body">
     
 	<div align="center"> 
-		<h1>{ Mohid Qureshi }</h1>
+		<h1 >{ Mohid Qureshi }</h1>
 		<br></br>
 		<a href="MohidQureshi Resume (2).pdf">
 			<button  type="button" class="btn btn-outline-dark resButton">RESUME</button>
@@ -45,7 +48,8 @@
 		<a href="https://github.com/MOHIDQ" target="_blank"class="fa fa-github"></a>
 		<a href="mailto:mohidq99@gmail.com" target="_blank"class="fa fa-envelope-o"></a>
 		<a href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram" target="_blank"class="fa fa-calculator" title="Canadian Sales Tax Calculator Application" ></a>
-		<a href="https://play.google.com/store/apps/details?id=com.gametime" target="_blank"class="fa fa-android" title="GameTime Android Application"></a>
+		<a href="https://play.google.com/store/apps/details?id=com.gametime" target="_blank"class="fas fa-basketball-ball" title="GameTime Android Application"></a>
+		
 
 </div>
 
@@ -54,12 +58,12 @@
 
 <br id="lineBreak"></br>
 
-<div class="card">
+<div class="card" style="width: 97%; margin: 0 auto;">
   <div class="card-body">
   	<div align="center"> <h2>Technical Skills</h2> </div>
   	
 	<br> </br>
-	<div align="center">
+	<div id="div1" align="center">
 		
 		<i class=" devicon-express-original-wordmark"></i>
 		<i class=" devicon-nodejs-plain-wordmark"></i>
@@ -70,7 +74,7 @@
 	</div>
 	<br> </br>
 
-	<div align="center">
+	<div id="div2" align="center">
 		<i class=" devicon-postgresql-plain-wordmark"></i>
 		<i class=" devicon-vuejs-plain-wordmark"></i>
 		<i class=" devicon-csharp-plain"></i>
@@ -90,11 +94,11 @@
 	<br> </br>
 
 	<div align="center">
-		<i class=" devicon-nodewebkit-plain-wordmark"></i>
+		<i class=" devicon-webpack-plain-wordmark"></i>
 		<i class=" devicon-linux-plain"></i>
 		<i class=" devicon-vim-plain" title="Vim Editor"></i>
 		<i class=" devicon-git-plain-wordmark"></i>
-		<i class="devicon-chrome-plain"></i>
+		<i class=" devicon-chrome-plain"></i>
 
 
 	</div>
@@ -105,7 +109,7 @@
 
 <br id="lineBreak"></br>
 
-<div class="card">
+<div class="card" style="width: 97%; margin: 0 auto;">
   <div class="card-body">
   	<div align="center"> <h2>About Me</h2> </div>
   	<p style = "font-size: 22px; font-family:Verdana;">
@@ -124,6 +128,7 @@
 
 
 
+<script src="external.js"></script>
 
 
 </body>
