--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="card-body">
     
 	<div align="center"> 
-		<h1 >{ Mohid Qureshi }</h1>
+		<h1 >[ Mohid Qureshi ]</h1>
 		<br></br>
 		<a href="MohidQureshi Resume (2).pdf">
 			<button  type="button" class="btn btn-outline-dark resButton">RESUME</button>
@@ -44,11 +44,11 @@
 	</div>
 	<br></br>
 	<div align="center">
-		<a href="https://www.linkedin.com/in/mohid-qureshi-2a711015b/" target="_blank"class="fa fa-linkedin"></a>
-		<a href="https://github.com/MOHIDQ" target="_blank"class="fa fa-github"></a>
-		<a href="mailto:mohidq99@gmail.com" target="_blank"class="fa fa-envelope-o"></a>
-		<a href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram" target="_blank"class="fa fa-calculator" title="Canadian Sales Tax Calculator Application" ></a>
-		<a href="https://play.google.com/store/apps/details?id=com.gametime" target="_blank"class="fas fa-basketball-ball" title="GameTime Android Application"></a>
+		<a href="https://www.linkedin.com/in/mohid-qureshi-2a711015b/" target="_blank"class="fa fa-linkedin" data-toggle="tooltip" title="Connect With Me On Linkedin"></a>
+		<a href="https://github.com/MOHIDQ" target="_blank"class="fa fa-github" data-toggle="tooltip" title="Github Profile"></a>
+		<a href="mailto:mohidq99@gmail.com" target="_blank"class="fa fa-envelope-o" data-toggle="tooltip" title="Email Me"></a>
+		<a href="https://play.google.com/store/apps/details?id=com.taxprogram.mohid.canadiansalestaxprogram" target="_blank"class="fa fa-calculator" data-toggle="tooltip" title="Canadian Sales Tax Calculator Android Application" ></a>
+		<a href="https://play.google.com/store/apps/details?id=com.gametime" target="_blank" class="fas fa-basketball-ball" data-toggle="tooltip" title="GameTime Android Application"></a>
 		
 
 </div>
@@ -65,40 +65,40 @@
 	<br> </br>
 	<div id="div1" align="center">
 		
-		<i class=" devicon-express-original-wordmark"></i>
-		<i class=" devicon-nodejs-plain-wordmark"></i>
-		<i class=" devicon-mongodb-plain-wordmark"></i>
-		<i class=" devicon-javascript-plain"></i>
-		<i class=" devicon-java-plain-wordmark"></i>
+		<i class=" devicon-express-original-wordmark colored" data-toggle="tooltip" title="Express.JS"></i>
+		<i class=" devicon-nodejs-plain-wordmark colored" data-toggle="tooltip" title="Node.JS"></i>
+		<i class=" devicon-mongodb-plain-wordmark colored" data-toggle="tooltip" title="MongoDB"></i>
+		<i class=" devicon-javascript-plain colored" data-toggle="tooltip" title="JavaScript"></i>
+		<i class=" devicon-java-plain-wordmark colored" data-toggle="tooltip" title="Java"></i>
 		
 	</div>
 	<br> </br>
 
 	<div id="div2" align="center">
-		<i class=" devicon-postgresql-plain-wordmark"></i>
-		<i class=" devicon-vuejs-plain-wordmark"></i>
-		<i class=" devicon-csharp-plain"></i>
-		<i class=" devicon-dot-net-plain-wordmark"></i>
-		<i class=" devicon-c-plain"></i>
+		<i class=" devicon-postgresql-plain-wordmark colored" data-toggle="tooltip" title="PostgresSQL"></i>
+		<i class=" devicon-vuejs-plain-wordmark colored" data-toggle="tooltip" title="Vue.JS"></i>
+		<i class=" devicon-csharp-plain colored" data-toggle="tooltip" title="C#"></i>
+		<i class=" devicon-dot-net-plain-wordmark colored" data-toggle="tooltip" title="ASP.NET MVC"></i>
+		<i class=" devicon-c-plain colored" data-toggle="tooltip" title="C"></i>
 		
 	</div>
 	<br> </br>
 
 	<div align="center">
-		<i class=" devicon-swift-plain-wordmark"></i>
-		<i class=" devicon-html5-plain-wordmark"></i>
-		<i class=" devicon-bootstrap-plain-wordmark"></i>
-		<i class=" devicon-python-plain-wordmark"></i>
-		<i class=" devicon-cplusplus-plain"></i>
+		<i class=" devicon-swift-plain-wordmark colored" data-toggle="tooltip" title="Swift"></i>
+		<i class=" devicon-html5-plain-wordmark colored" data-toggle="tooltip" title="HTML 5"></i>
+		<i class=" devicon-bootstrap-plain-wordmark colored" data-toggle="tooltip" title="Bootstrap 4"></i>
+		<i class=" devicon-python-plain-wordmark colored" data-toggle="tooltip" title="Python"></i>
+		<i class=" devicon-cplusplus-plain colored" data-toggle="tooltip" title="C++"></i>
 	</div>
 	<br> </br>
 
 	<div align="center">
-		<i class=" devicon-webpack-plain-wordmark"></i>
-		<i class=" devicon-linux-plain"></i>
-		<i class=" devicon-vim-plain" title="Vim Editor"></i>
-		<i class=" devicon-git-plain-wordmark"></i>
-		<i class=" devicon-chrome-plain"></i>
+		<i class=" devicon-webpack-plain-wordmark colored" data-toggle="tooltip" title="Webpack"></i>
+		<i class=" devicon-linux-plain colored" data-toggle="tooltip" title="Linux"></i>
+		<i class=" devicon-vim-plain colored" title="Vim Editor" data-toggle="tooltip" title="Vim Editor"></i>
+		<i class=" devicon-git-plain-wordmark colored" data-toggle="tooltip" title="Git"></i>
+		<i class=" devicon-chrome-plain colored" data-toggle="tooltip" title="Chrome Extensions"></i>
 
 
 	</div>
@@ -113,11 +113,11 @@
   <div class="card-body">
   	<div align="center"> <h2>About Me</h2> </div>
   	<p style = "font-size: 22px; font-family:Verdana;">
-		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at Carleton Univerity with an interest in Web Development, Android Development and Problem Solving.
+		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at <span style="color:#4385ef">Carleton Univerity</span> with an interest in Web Development, Android Development and Problem Solving.
 		I currently have an internship at <span style="color:#4385ef">Versaterm Inc as a Software Developer</span>, where I have created a <span style="color:#4385ef"> web application (NodeJS, MySQL, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all our employees and displays them in a concise table format for other employees to check coworkers statuses for the purpose of making eachother more reachable while working from home. I am currently working on <span style="color:#4385ef">automating</span> the process of filling out police documents ie) Affidavits with our data using the <span style="color:#4385ef">Office Javascript API</span>.
 		<br> </br> 
 
-		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#4385ef">Machine Learning • Distributed Computing • Android & IOS development • Computer Vision • Neural Networks • Artificial Intelligance</span>. 
+		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#4385ef">Machine Learning • Distributed Computing • Android & IOS development • Neural Networks • Artificial Intelligance</span>. 
 		<br> </br> 
 
 		I have extensive experience with <span style="color:#4385ef">Javascript • Java • Android Development • Python • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#4385ef">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that will be utilized by the rest of the Government of Canada to create web applications. As well as built an NPRI web query tool which provides data about pollutant releases, collected from all corporations that reside in Canada. 
