Edited About Me section

--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
   <div class="card-body">
   	<div align="center"> <h2>About Me</h2> </div>
   	<p style = "font-size: 22px; font-family:Verdana;">
-		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at <span style="color:#4385ef">Carleton Univerity</span> with an interest in Web Development, Android Development and Problem Solving.
-		I currently have an internship at <span style="color:#4385ef">Versaterm Inc as a Software Developer</span>, where I have created a <span style="color:#4385ef"> web application (NodeJS, MySQL, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all our employees and displays them in a concise table format for other employees to check coworkers statuses for the purpose of making eachother more reachable while working from home. I am currently working on <span style="color:#4385ef">automating</span> the process of filling out police documents ie) Affidavits with our data using the <span style="color:#4385ef">Office Javascript API</span>.
+		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at <span style="color:#4385ef">Carleton University</span> and an interest in Web Development, Android Development and Problem Solving.
+		I recently completed an internship at <span style="color:#4385ef">Versaterm Inc. as a Software Developer</span>, where I have created a <span style="color:#4385ef"> web application (NodeJS, MySQL, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all employees and displays them in a concise grid format for other employees to check coworkers statuses for the purpose of making each other more reachable while working from home. I also worked on <span style="color:#4385ef">automating</span> the process of filling out police documents i.e.) affidavits with our data using the <span style="color:#4385ef">Office Javascript API</span>.
 		<br> </br> 
 
-		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#4385ef">Machine Learning • Distributed Computing • Android & IOS development • Neural Networks • Artificial Intelligance</span>. 
+		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#4385ef">Machine Learning • Distributed Computing • Android & IOS development • Neural Networks • Artificial Intelligence</span>. 
 		<br> </br> 
 
-		I have extensive experience with <span style="color:#4385ef">Javascript • Java • Android Development • Python • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#4385ef">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that will be utilized by the rest of the Government of Canada to create web applications. As well as built an NPRI web query tool which provides data about pollutant releases, collected from all corporations that reside in Canada. 
+		I have extensive experience with <span style="color:#4385ef">Javascript • Java • Android Development • NodeJS • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#4385ef">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that is now being utilized by the rest of the Government of Canada to create web applications. I also built an NPRI web query tool which provides data about pollutant releases collected from all corporations that reside in Canada. 
 	</p>
 
   </div>
