--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<h1 >[ Mohid Qureshi ]</h1>
 		<br></br>
 		<a href="MohidQureshi Resume (2).pdf">
-			<button  type="button" class="btn btn-outline-dark resButton">RESUME</button>
+			<button  type="button" class="btn btn-outline-light resButton">RESUME</button>
 		</a>
 	</div>
 	<br></br>
@@ -65,11 +65,12 @@
 	<br> </br>
 	<div id="div1" align="center">
 		
-		<i class=" devicon-express-original-wordmark colored" data-toggle="tooltip" title="Express.JS"></i>
+		<i class=" devicon-java-plain-wordmark colored" data-toggle="tooltip" title="Java"></i>
 		<i class=" devicon-nodejs-plain-wordmark colored" data-toggle="tooltip" title="Node.JS"></i>
 		<i class=" devicon-mongodb-plain-wordmark colored" data-toggle="tooltip" title="MongoDB"></i>
 		<i class=" devicon-javascript-plain colored" data-toggle="tooltip" title="JavaScript"></i>
-		<i class=" devicon-java-plain-wordmark colored" data-toggle="tooltip" title="Java"></i>
+		
+		<i class=" devicon-express-original-wordmark" data-toggle="tooltip" title="Express.JS"></i>
 		
 	</div>
 	<br> </br>
@@ -95,10 +96,11 @@
 
 	<div align="center">
 		<i class=" devicon-webpack-plain-wordmark colored" data-toggle="tooltip" title="Webpack"></i>
-		<i class=" devicon-linux-plain colored" data-toggle="tooltip" title="Linux"></i>
+		<i class=" devicon-linux-plain" data-toggle="tooltip" title="Linux"></i>
 		<i class=" devicon-vim-plain colored" title="Vim Editor" data-toggle="tooltip" title="Vim Editor"></i>
 		<i class=" devicon-git-plain-wordmark colored" data-toggle="tooltip" title="Git"></i>
 		<i class=" devicon-chrome-plain colored" data-toggle="tooltip" title="Chrome Extensions"></i>
+
 
 
 	</div>
@@ -112,15 +114,16 @@
 <div class="card" style="width: 97%; margin: 0 auto;">
   <div class="card-body">
   	<div align="center"> <h2>About Me</h2> </div>
-  	<p style = "font-size: 22px; font-family:Verdana;">
-		I'm a <span style="color:#4385ef">Computer Science student</span> with a focus in Algorthims at <span style="color:#4385ef">Carleton University</span> and an interest in Web Development, Android Development and Problem Solving.
-		I recently completed an internship at <span style="color:#4385ef">Versaterm Inc. as a Software Developer</span>, where I have created a <span style="color:#4385ef"> web application (NodeJS, MySQL, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all employees and displays them in a concise grid format for other employees to check coworkers statuses for the purpose of making each other more reachable while working from home. I also worked on <span style="color:#4385ef">automating</span> the process of filling out police documents i.e.) affidavits with our data using the <span style="color:#4385ef">Office Javascript API</span>.
+  	<br>
+  	<p style = "font-size: 22px; font-family:Verdana; color: #F7F7F7;">
+		I'm a <span style="color:#3ac9ff">Computer Science student</span> with a focus in Algorthims at <span style="color:#3ac9ff">Carleton University</span> and an interest in Web Development, Android Development and Problem Solving.
+		I recently completed an internship at <span style="color:#3ac9ff">Versaterm Inc. as a Software Developer</span>, where I have created a <span style="color:#3ac9ff"> web application (NodeJS, MySQL, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all employees and displays them in a concise grid format for other employees to check coworkers statuses for the purpose of making each other more reachable while working from home. I also worked on <span style="color:#3ac9ff">automating</span> the process of filling out police documents i.e.) affidavits with our data using the <span style="color:#3ac9ff">Office Javascript API</span>.
 		<br> </br> 
 
-		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#4385ef">Machine Learning • Distributed Computing • Android & IOS development • Neural Networks • Artificial Intelligence</span>. 
+		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#3ac9ff">Machine Learning • Distributed Computing • Android & IOS development • Neural Networks • Artificial Intelligence</span>. 
 		<br> </br> 
 
-		I have extensive experience with <span style="color:#4385ef">Javascript • Java • Android Development • NodeJS • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#4385ef">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that is now being utilized by the rest of the Government of Canada to create web applications. I also built an NPRI web query tool which provides data about pollutant releases collected from all corporations that reside in Canada. 
+		I have extensive experience with <span style="color:#3ac9ff">Javascript • Java • Android Development • NodeJS • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#3ac9ff">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that is now being utilized by the rest of the Government of Canada to create web applications. I also built an NPRI web query tool which provides data about pollutant releases collected from all corporations that reside in Canada. 
 	</p>
 
   </div>
