--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<br> </br>
 
 	<div id="div2" align="center">
-		<i class=" devicon-postgresql-plain-wordmark colored" data-toggle="tooltip" title="PostgresSQL"></i>
+		<i class=" devicon-postgresql-plain-wordmark colored" data-toggle="tooltip" title="PostgreSQL"></i>
 		<i class=" devicon-vuejs-plain-wordmark colored" data-toggle="tooltip" title="Vue.JS"></i>
 		<i class=" devicon-csharp-plain colored" data-toggle="tooltip" title="C#"></i>
 		<i class=" devicon-dot-net-plain-wordmark colored" data-toggle="tooltip" title="ASP.NET MVC"></i>
@@ -95,7 +95,7 @@
 	<br> </br>
 
 	<div align="center">
-		<i class=" devicon-webpack-plain-wordmark colored" data-toggle="tooltip" title="Webpack"></i>
+		<i class=" devicon-jquery-plain-wordmark colored" data-toggle="tooltip" title="JQuery"></i>
 		<i class=" devicon-linux-plain" data-toggle="tooltip" title="Linux"></i>
 		<i class=" devicon-vim-plain colored" title="Vim Editor" data-toggle="tooltip" title="Vim Editor"></i>
 		<i class=" devicon-git-plain-wordmark colored" data-toggle="tooltip" title="Git"></i>
@@ -116,14 +116,15 @@
   	<div align="center"> <h2>About Me</h2> </div>
   	<br>
   	<p style = "font-size: 22px; font-family:Verdana; color: #F7F7F7;">
-		I'm a <span style="color:#3ac9ff">Computer Science student</span> with a focus in Algorthims at <span style="color:#3ac9ff">Carleton University</span> and an interest in Web Development, Android Development and Problem Solving.
-		I recently completed an internship at <span style="color:#3ac9ff">Versaterm Inc. as a Software Developer</span>, where I have created a <span style="color:#3ac9ff"> web application (NodeJS, MySQL, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all employees and displays them in a concise grid format for other employees to check coworkers statuses for the purpose of making each other more reachable while working from home. I also worked on <span style="color:#3ac9ff">automating</span> the process of filling out police documents i.e.) affidavits with our data using the <span style="color:#3ac9ff">Office Javascript API</span>.
+		I'm a <span style="color:#3ac9ff">Computer Science</span> student with a focus in Algorithms at <span style="color:#3ac9ff">Carleton University</span> and an interest in Web Development, Android Development and Problem Solving. I am currently in my fourth year where I will be taking courses focusing on <span style="color:#3ac9ff">Machine Learning • Distributed Computing • Android & IOS development • Neural Networks • Artificial Intelligence</span>. I have extensive experience with <span style="color:#3ac9ff">Javascript • Java • Android Development • NodeJS • SQL • MongoDB • C#</span>.
+
 		<br> </br> 
 
-		I am currently in my fourth year where I will be taking courses focusing on <span style="color:#3ac9ff">Machine Learning • Distributed Computing • Android & IOS development • Neural Networks • Artificial Intelligence</span>. 
+		I recently completed an internship at <span style="color:#3ac9ff">Versaterm Inc.</span> as a <span style="color:#3ac9ff">Software Developer</span>, where I have created a <span style="color:#3ac9ff"> web application (NodeJS, MySQL, JavaScript, HTML/CSS, PHP) </span>that fetches the Microsoft Teams Presence/Status of all employees and displays them in a concise grid format for other employees to check coworkers' statuses for the purpose of making each other more reachable while working from home. I also worked on a Word Add-In that <span style="color:#3ac9ff">automates</span> the process of filling out police/court documents, i.e.) affidavits with our data using the <span style="color:#3ac9ff">Office Javascript API</span>.
+		
 		<br> </br> 
 
-		I have extensive experience with <span style="color:#3ac9ff">Javascript • Java • Android Development • NodeJS • SQL • MongoDB</span>. During May 2019 - August 2019 I completed an internship at <span style="color:#3ac9ff">Environment Canada as a Full Stack Web Developer</span>. I worked on creating a new web framework that is now being utilized by the rest of the Government of Canada to create web applications. I also built an NPRI web query tool which provides data about pollutant releases collected from all corporations that reside in Canada. 
+		 During May 2019 - August 2019, I completed an internship at <span style="color:#3ac9ff">Environment Canada</span> as a <span style="color:#3ac9ff">Full Stack Web Developer</span>. I worked on creating a new web framework that is now being utilized by the rest of the Government of Canada to create web applications. I also built an NPRI web query tool which provides data about pollutant releases collected from all corporations that reside in Canada <span style="color:#3ac9ff"> (ASP.NET MVC, VueJS, C#, JQuery, HTML/CSS)</span>. 
 	</p>
 
   </div>
