--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<i class=" devicon-vuejs-plain-wordmark colored" data-toggle="tooltip" title="Vue.JS"></i>
 		<i class=" devicon-csharp-plain colored" data-toggle="tooltip" title="C#"></i>
 		<i class=" devicon-dot-net-plain-wordmark colored" data-toggle="tooltip" title="ASP.NET MVC"></i>
-		<i class=" devicon-c-plain colored" data-toggle="tooltip" title="C"></i>
+		<i class="devicon-amazonwebservices-plain-wordmark colored" data-toggle="tooltip" title="Amazon Web Services"></i>
 		
 	</div>
 	<br> </br>
@@ -90,7 +90,7 @@
 		<i class=" devicon-html5-plain-wordmark colored" data-toggle="tooltip" title="HTML 5"></i>
 		<i class=" devicon-bootstrap-plain-wordmark colored" data-toggle="tooltip" title="Bootstrap 4"></i>
 		<i class=" devicon-python-plain-wordmark colored" data-toggle="tooltip" title="Python"></i>
-		<i class=" devicon-cplusplus-plain colored" data-toggle="tooltip" title="C++"></i>
+		<i class="devicon-react-original-wordmark colored" data-toggle="tooltip" title="ReactJS"></i>
 	</div>
 	<br> </br>
 
