Updated Tech Skills

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 	<br> </br>
 
 	<div align="center">
-		<i class=" devicon-swift-plain-wordmark colored" data-toggle="tooltip" title="Swift"></i>
+		<i class="devicon-android-plain-wordmark colored" data-toggle="tooltip" title="Android Development"></i>
 		<i class=" devicon-html5-plain-wordmark colored" data-toggle="tooltip" title="HTML 5"></i>
 		<i class=" devicon-bootstrap-plain-wordmark colored" data-toggle="tooltip" title="Bootstrap 4"></i>
 		<i class=" devicon-python-plain-wordmark colored" data-toggle="tooltip" title="Python"></i>
-		<i class="devicon-react-original-wordmark colored" data-toggle="tooltip" title="ReactJS"></i>
+		<i class="devicon-docker-plain-wordmark colored" data-toggle="tooltip" title="Docker"></i>
 	</div>
 	<br> </br>
 
