Update resume + skills

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 	<div id="div2" align="center">
 		<i class=" devicon-postgresql-plain-wordmark colored" data-toggle="tooltip" title="PostgreSQL"></i>
-		<i class=" devicon-vuejs-plain-wordmark colored" data-toggle="tooltip" title="Vue.JS"></i>
+		<i class="devicon-react-original-wordmark colored" data-toggle="tooltip" title="ReactJS"></i>
 		<i class=" devicon-csharp-plain colored" data-toggle="tooltip" title="C#"></i>
 		<i class=" devicon-dot-net-plain-wordmark colored" data-toggle="tooltip" title="ASP.NET MVC"></i>
 		<i class="devicon-amazonwebservices-plain-wordmark colored" data-toggle="tooltip" title="Amazon Web Services"></i>
